release/0.62/_sources/examples/gallery_examples/01-apdlmath-examples/solve_sparse_matrix.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/01-apdlmath-examples/solve_sparse_matrix.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_gallery_examples_01-apdlmath-examples_solve_sparse_matrix.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_01-apdlmath-examples_solve_sparse_matrix.py:


Performing Sparse Factorization and Solve Operations
----------------------------------------------------

Using APDLMath, you can solve linear systems of equations based on
sparse or dense matrices.

.. GENERATED FROM PYTHON SOURCE LINES 9-17

.. code-block:: default

    from ansys.mapdl.core import launch_mapdl
    from ansys.mapdl.core.examples import vmfiles

    # Start MAPDL as a service and create an APDLMath object.
    mapdl = launch_mapdl()
    mm = mapdl.math









.. GENERATED FROM PYTHON SOURCE LINES 18-26

Factorize and Solve Sparse Linear Systems
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
First, run a MAPDL solve to create a .full file
We use a model from the official verification manual.

After a solve command, the full contains the assemblied stiffness
matrix, mass matrix, and the load vector.


.. GENERATED FROM PYTHON SOURCE LINES 26-28

.. code-block:: default

    out = mapdl.input(vmfiles["vm153"])








.. GENERATED FROM PYTHON SOURCE LINES 29-31

List the files in current directory


.. GENERATED FROM PYTHON SOURCE LINES 31-33

.. code-block:: default

    mapdl.list_files()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    ['HexBeam.cdb', 'LatheCutter.anf', 'PRSMEMB.DSP', 'PRSMEMB.emat', 'PRSMEMB.esav', 'PRSMEMB.full', 'PRSMEMB.mntr', 'PRSMEMB.mode', 'PRSMEMB.rst', 'PRSMEMB000.jpg', 'PRSMEMB001.jpg', 'PRSMEMB002.jpg', 'PRSMEMB003.jpg', 'PRSMEMB004.jpg', 'PRSMEMB005.jpg', 'PRSMEMB006.jpg', 'PRSMEMB007.jpg', 'PRSMEMB008.jpg', 'PRSMEMB009.jpg', 'PRSMEMB010.jpg', 'PRSMEMB011.jpg', 'SCRATCH', 'SOLVIT.MAC', 'TABLE_1', 'TABLE_2', '__tmp_sys_out_acnxtejvbz__', '__tmp_sys_out_aegtolawph__', '__tmp_sys_out_amqwrztdlv__', '__tmp_sys_out_cvdjcgzgwj__', '__tmp_sys_out_cwpnkfgyzr__', '__tmp_sys_out_dcwuuhslyb__', '__tmp_sys_out_ekthdqihdk__', '__tmp_sys_out_hbgvfsidyw__', '__tmp_sys_out_hraorjqdxj__', '__tmp_sys_out_igpubknzuh__', '__tmp_sys_out_ithbnteuyu__', '__tmp_sys_out_jalhuyprzx__', '__tmp_sys_out_jmchoebsqv__', '__tmp_sys_out_lmkvzatavo__', '__tmp_sys_out_lxdeqpsmlw__', '__tmp_sys_out_phddqqokap__', '__tmp_sys_out_qdmocpprqy__', '__tmp_sys_out_rmaexvvdav__', '__tmp_sys_out_sephjtorli__', '__tmp_sys_out_shehzpqkhg__', '__tmp_sys_out_slfhrpkopl__', '__tmp_sys_out_somefpzplr__', '__tmp_sys_out_ucgpppwbaa__', '__tmp_sys_out_ucvrjjtied__', '__tmp_sys_out_upxfrbajxe__', '__tmp_sys_out_uwanfafgay__', '__tmp_sys_out_vtedqgbbyk__', '__tmp_sys_out_vtkvrnuipf__', '__tmp_sys_out_wkgdazvsnm__', '__tmp_sys_out_wnumojdipk__', '__tmp_sys_out_wtxytljivl__', '__tmp_sys_out_wxpdagqdam__', '__tmp_sys_out_yaovwfqtet__', '__tmp_sys_out_zdwoyvfhpy__', '__tmp_sys_out_zhkoxlelqp__', '__tmp_sys_out_zutbyjtuga__', '_tmp.iges', 'anaconda-post.log', 'anstmp', 'ansys_inc', 'bfxaywmral.txt', 'bin', 'bracket.iges', 'dev', 'etc', 'file.DSP', 'file.ans_log', 'file.err', 'file.esav', 'file.full', 'file.grph', 'file.ldhi', 'file.lock', 'file.log', 'file.mlv', 'file.mntr', 'file.mode', 'file.page', 'file.r001', 'file.rdb', 'file.rth', 'file.stat', 'file000.png', 'file001.png', 'home', 'iuvrpikdde.txt', 'lib', 'lib64', 'lpevyisrjy.txt', 'media', 'mnt', 'opt', 'proc', 'root', 'run', 'sbin', 'srv', 'sys', 'tmp', 'tmp.cdb', 'tmp_axdeqyoeap.inp', 'tmp_ffbdachohj.inp', 'tmp_gihszsokzi.inp', 'tmp_ixktaodurq.inp', 'tmp_rvvsgigydg.inp', 'tmp_rzanrereye.inp', 'tmp_rzcdtgwliw.inp', 'tmp_siyywxhbym.inp', 'tmp_ypuozqwauh.inp', 'tmp_zibovulqhc.inp', 'usr', 'var', 'vm1.dat', 'vm1.vrt', 'vm153.dat', 'vm153.vrt', 'wing.dat']



.. GENERATED FROM PYTHON SOURCE LINES 34-41

Extract the Stiffness matrix from the ``FULL`` file, in a sparse
matrix format.

You can get help on the stiff function with ``help(mm.stiff)``

Printout the dimensions of this Sparse Matrix


.. GENERATED FROM PYTHON SOURCE LINES 41-44

.. code-block:: default

    k = mm.stiff(fname="PRSMEMB.full")
    k





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    Sparse APDLMath Matrix (126, 126)



.. GENERATED FROM PYTHON SOURCE LINES 45-47

Get a copy of the K Sparse Matrix as a Numpy Array


.. GENERATED FROM PYTHON SOURCE LINES 47-50

.. code-block:: default

    ky = k.asarray()
    ky





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <126x126 sparse matrix of type '<class 'numpy.float64'>'
    	with 738 stored elements in Compressed Sparse Row format>



.. GENERATED FROM PYTHON SOURCE LINES 51-55

Extract the load vector from the ``FULL`` file.

Printout the norm of this vector.


.. GENERATED FROM PYTHON SOURCE LINES 55-58

.. code-block:: default

    b = mm.rhs(fname="PRSMEMB.full")
    b.norm()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    3.472960080375275e-05



.. GENERATED FROM PYTHON SOURCE LINES 59-61

Get a copy of the load vector as a numpy array


.. GENERATED FROM PYTHON SOURCE LINES 61-63

.. code-block:: default

    by = b.asarray()








.. GENERATED FROM PYTHON SOURCE LINES 64-66

Factorize the Stifness Matrix using the MAPDL DSPARSE solver


.. GENERATED FROM PYTHON SOURCE LINES 66-68

.. code-block:: default

    s = mm.factorize(k)








.. GENERATED FROM PYTHON SOURCE LINES 69-71

Solve the linear system


.. GENERATED FROM PYTHON SOURCE LINES 71-73

.. code-block:: default

    x = s.solve(b)








.. GENERATED FROM PYTHON SOURCE LINES 74-76

Print the **norm** of the solution vector


.. GENERATED FROM PYTHON SOURCE LINES 76-78

.. code-block:: default

    x.norm()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    5.815928297029885e-08



.. GENERATED FROM PYTHON SOURCE LINES 79-83

We check the accuracy of the solution, by verifying that

:math:`KX - B = 0`


.. GENERATED FROM PYTHON SOURCE LINES 83-87

.. code-block:: default

    kx = k.dot(x)
    kx -= b
    print("Residual error:", kx.norm() / b.norm())





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Residual error: 1.3674935392674993e-15




.. GENERATED FROM PYTHON SOURCE LINES 88-90

Summary of all allocated APDLMath Objects


.. GENERATED FROM PYTHON SOURCE LINES 90-92

.. code-block:: default

    mm.status()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    APDLMATH PARAMETER STATUS-  (      5 PARAMETERS DEFINED)

      Name                   Type            Mem. (MB)       Dims            Workspace

       NHERCD                SMAT            0.011           [126:126]               1
       GBTLJV                VEC             0.001           126             1
       QYMFFB                VEC             0.001           126             1
       VBMFDW                VEC             0.001           126             1
       LHVOFH                LSENGINE        --              --              1




.. GENERATED FROM PYTHON SOURCE LINES 93-95

Delete all APDLMath Objects


.. GENERATED FROM PYTHON SOURCE LINES 95-98

.. code-block:: default

    mm.free()









.. GENERATED FROM PYTHON SOURCE LINES 99-100

stop mapdl

.. GENERATED FROM PYTHON SOURCE LINES 100-101

.. code-block:: default

    mapdl.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.808 seconds)


.. _sphx_glr_download_examples_gallery_examples_01-apdlmath-examples_solve_sparse_matrix.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: solve_sparse_matrix.py <solve_sparse_matrix.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: solve_sparse_matrix.ipynb <solve_sparse_matrix.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
